[package]
name = "nostr-sdk"
version = "0.44.1"
edition = "2021"
description = "A full-featured SDK for building high-performance and reliable nostr applications."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "sdk"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["runtime-tokio", "transport-tungstenite"]
# Enables tokio runtime
runtime-tokio = ["nostr-runtime/tokio"]
transport-tungstenite = ["dep:nostr-transport-tungstenite"]

[dependencies]
futures.workspace = true
hex = { workspace = true, features = ["std"] }
lru.workspace = true
negentropy = { workspace = true, features = ["std"] }
nostr = { workspace = true, features = ["std", "rand", "os-rng"] }
nostr-database.workspace = true
nostr-gossip.workspace = true
nostr-runtime.workspace = true
nostr-transport.workspace = true
nostr-transport-tungstenite = { workspace = true, features = ["rustls"], optional = true }
tokio = { workspace = true, features = ["macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { workspace = true, features = ["std"] }

[dev-dependencies]
nostr = { workspace = true, features = ["all-nips"] }
nostr-connect.workspace = true
nostr-lmdb.workspace = true
nostr-ndb.workspace = true
nostr-gossip-memory.workspace = true
nostr-relay-builder.workspace = true
nostr-runtime = { workspace = true, features = ["tokio"] }
smol = "2.0"
tokio = { workspace = true, features = ["macros", "rt"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[example]]
name = "aggregated-query"
required-features = ["runtime-tokio"]

[[example]]
name = "blacklist"
required-features = ["runtime-tokio"]

[[example]]
name = "client"
required-features = ["runtime-tokio"]

[[example]]
name = "comment"
required-features = ["runtime-tokio"]

[[example]]
name = "fetch-events"
required-features = ["runtime-tokio"]

[[example]]
name = "gossip"
required-features = ["runtime-tokio"]

[[example]]
name = "monitor"
required-features = ["runtime-tokio"]

[[example]]
name = "nostr-connect"
required-features = ["runtime-tokio"]

[[example]]
name = "bot"
required-features = ["runtime-tokio"]

[[example]]
name = "nostrdb"
required-features = ["runtime-tokio"]

[[example]]
name = "smol-runtime"
required-features = ["transport-tungstenite"]

[[example]]
name = "stream-events"
required-features = ["runtime-tokio"]

[[example]]
name = "subscriptions"
required-features = ["runtime-tokio"]

[[example]]
name = "tor"
required-features = ["runtime-tokio"]

[[example]]
name = "lmdb"
required-features = ["runtime-tokio"]

[[example]]
name = "whitelist"
required-features = ["runtime-tokio"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bench)'] }
