[package]
name = "nostr-transport"
version = "0.44.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes = "1.11"
futures.workspace = true
nostr = { workspace = true, features = ["alloc"] }
